@@ -10,6 +10,8 @@ use Test::More;
 
 my $mod = 'RPi::WiringPi';
 
+rpi_sudo_check();
+
 if ($> == 0){
     $ENV{PI_BOARD} = 1;
 }
