@@ -1,7 +1,8 @@
 Revision history for Perl extension RPi::WiringPi.
 
 2.3633_03 UNREL
-        -
+        - added rpi_sudo_check() in RPiTest. All test files that sudo needs to
+          call this function before any work is done (fixes #144)
 
 2.3633_02 2019-09-21
         - TRIAL RELEASE: may not install properly, and there's a potential for
